đổi màu, đơn vị

--- a/src/main/webapp/CSS/style.css
+++ b/src/main/webapp/CSS/style.css
@@ -1,5 +1,46 @@
 .custom-color {
-	/*background: linear-gradient(90deg, rgba(198,245,255,1) 0%, rgba(137,182,254,1) 28%, rgba(123,124,255,1) 58%, rgba(105,97,255,1) 87%, rgba(36,24,255,1) 100%);
-*/
-	background: radial-gradient(circle, rgba(112, 192, 255, 1) 0%, rgba(98, 153, 254, 1) 24%, rgba(123, 124, 255, 1) 49%, rgba(97, 124, 255, 1) 86%, rgba(36, 24, 255, 1) 100%);
+	background: rgb(251,63,148);
+background: radial-gradient(circle, rgba(251,63,148,0.9772701316854867) 0%, rgba(252,70,198,0.9212477227219013) 42%, rgba(243,106,202,0.9212477227219013) 81%);
+
+	/* background: radial-gradient(circle, rgba(112, 192, 255, 1) 0%, rgba(98, 153, 254, 1) 24%, rgba(123, 124, 255, 1) 49%, rgba(97, 124, 255, 1) 86%, rgba(36, 24, 255, 1) 100%); */
+}
+.btn-primary {
+	background-color: #ff48b9ec !important;
+	border-color: #ff48b9ec !important;
+}
+.btn-info {
+	background-color: #ff0073 !important;
+	border-color: #ff0073 !important;
+}
+.real-price {
+	font-size: 20px !important;
+	font-weight: 600;
+}
+
+.product-price {
+	font-size: 17px !important;
+	text-decoration: line-through;
+}
+.product-discount {
+	font-size: 15px !important;
+	color: #d60084 !important;
+}
+.btn-outline-primary{
+	color: #ff48b9ec !important;
+	border-color: #ff48b9ec !important;
+}
+.btn-outline-primary:hover{
+	color: #fff !important;
+	border-color: #ff48b9ec !important;
+	background-color: #ff48b9ec !important;
+}
+a{
+	color: #db1c92 !important;
+}
+h1, h2, h3{
+	color: #db1c92 !important;
+}
+.btn-secondary{
+	background-color: #ffa83de4 !important;
+	border-color: #ffa83de4 !important;
 }
